Updated publishing settings

--- a/src/rtpupdate/rtpupdate.csproj
+++ b/src/rtpupdate/rtpupdate.csproj
@@ -25,9 +25,11 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>http://download.elfeon.com/rtp/</InstallUrl>
+    <ProductName>NOAA RTP</ProductName>
+    <PublisherName>Ilya Zaslavsky</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
-    <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>2</ApplicationRevision>
+    <WebPage>index.html</WebPage>
+    <ApplicationRevision>1</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -115,6 +117,9 @@
   <ItemGroup>
     <Content Include="lib\TaskScheduler.dll" />
     <Content Include="lib\TaskScheduler.XML" />
+    <Content Include="rtp.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
